--- a/views/404.html
+++ b/views/404.html
@@ -3,15 +3,13 @@
 
 <head>
 {% include "./firebaseSDKs.html" %}
-	<link rel="stylesheet" href="./css/tag-display.css">
+	<link rel="stylesheet" href="/css/tag-display.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="../css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-	<script src="../js/bootstrap.bundle.min.js">
-	</script>
-	<link rel="stylesheet" href="../css/home.css">
-  <link rel="stylesheet" href="../css/404.css">
-  <link rel="stylesheet" href="../css/light-theme.css">
+	<link href="/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+	<link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href=/css/404.css">
+  <link rel="stylesheet" href="./css/light-theme.css">
 
 
 	
@@ -56,6 +54,6 @@
     <p class="float-end"><a href="#">Back to top</a></p>
     {% include "./footer.html" %}
   </footer>
-  <script src="../js/404.js"></script>
+  <script src="/js/404.js"></script>
 </main>
 </body>
