--- a/views/contact.html
+++ b/views/contact.html
@@ -9,9 +9,9 @@
 	<meta name="description" content="Fill out the form to contact Help! We will get back to you as soon as possible.">
 	<meta name="author" content="SoJS">
 	<meta name="generator" content="Hugo 0.79.0">
-	<link rel="stylesheet" href="./css/home.css" />
-	<link rel="stylesheet" href="./css/cards.css">
-  <link rel="stylesheet" href="./css/dark-theme.css"/>
+	<link rel="stylesheet" href="/css/home.css" />
+	<link rel="stylesheet" href="/css/cards.css">
+  <link rel="stylesheet" href="/css/dark-theme.css"/>
 
 
 	<!-- Tags -->
@@ -46,7 +46,7 @@
 
 
 	<!-- Bootstrap core CSS -->
-	<link href="./css/bootstrap.min.css" rel="stylesheet">
+	<link href="/css/bootstrap.min.css" rel="stylesheet">
 
 	<style>
 		.bd-placeholder-img {
@@ -89,9 +89,8 @@
 </div>
 
 
-    <script src="./js/bootstrap.bundle.min.js"></script>
 
-      <script src = './js/kothing.js'></script>
+      <script src = '/js/kothing.js'></script>
 
   </body>
 </html>
