--- a/views/home.html
+++ b/views/home.html
@@ -78,7 +78,7 @@
                 <div class = "captioncontent">
                   <h6 class = "h1">Comment with Widgetpack</h6>
                   <p>You can now comment on other peoples posts. <b>Amazing.</b></p>
-                  <p><a class="btn btn-lg btn-primary" href="/pleas" role="button">Veiw all pleas</a></p>
+                  <p><a class="btn btn-lg btn-primary" href="/pleas" role="button">View all pleas</a></p>
                 </div>
               </div>
 						</div>
@@ -120,23 +120,10 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Don't Do It alone. <span class = "text-muted">Get Some Help.</span></h2>
-        <p class="lead">Don't work on your huge, time-consuming projects by yourself. Don't frustrate yourself when something is not working. Go get some Help. But from where? Stackoverflow, repl talk, github, discord, and assorted coding blogs are all well and good. They answer your questions. They help you out. But they do not provide developer who will actually help you. They just answer your questions. Help is designed to let you find people who are interested in assisting you in your project. Too many times I've had to quit, becuase the sheer quantity of code is just too much for one person. Not anymore. <a href = "https://help.sojs.repl.co/plea/-MUjQcKtB1AAIVy_XRfL" class = "btn btn-primary">What is Help?</a></p>
+        <p class="lead">Don't work on your huge, time-consuming projects by yourself. Don't frustrate yourself when something is not working. Go get some Help. But from where? Stackoverflow, repl talk, github, discord, and assorted coding blogs are all well and good. They answer your questions. They help you out. But they do not provide developer who will actually help you, they just answer your questions. Help is designed to let you find people who are interested in assisting you in your project. To many times coders have to quite, becuase the code is <i>too much</i>. Not Anymore. <a href = "https://help.sojs.repl.co/plea/-MUjQcKtB1AAIVy_XRfL" class = "btn btn-primary">What is Help?</a></p>
       </div>
       <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="90%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="Help Others" src = "./imgs/dont_do_it_alone.jpg" style = "object-fit:cover"/>
-
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h6 class="featurette-heading h2">Find things easily. <span class="text-muted"> Just Click "Search"</span></h6>
-        <p class="lead">Its a large galaxy. One can not traverse it by themself. The internet is just as large. If someone viewed every site on the web for 1 second, he would be done in about 40 years. Do you want to search for a plea that you could be interested in for 40 years? I thought not. Enter <a href = "/search"><i>Help Search</i></a>, a highly versatile search engine that parses through hundreds of pleas to find the one that <strong>you</strong> want. No need to traverse the galaxy by yourself.</p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="90%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="search easily" src = "./imgs/search_everywhere.jpg" style = "object-fit:cover"/>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="90%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="Help Others" src = "./imgs/dont_do_it_alone.png" style = "object-fit:cover"/>
 
       </div>
     </div>
@@ -145,23 +132,36 @@
 
     <div class="row featurette">
       <div class="col-md-7">
+        <h6 class="featurette-heading h2">Find things easily. <span class="text-muted"> Just Click "Search"</span></h6>
+        <p class="lead"><a href = "/search">Help Search</a> is search engine made by <a href = "https://sojs.dev">@SoJS</a> to make life simpler while on Help. It allows you to quickly specify what you are good at, and enables you to find a plea that sounds interesting, and that you might want to help in.</p>
+      </div>
+      <div class="col-md-5">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="90%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="search easily" src = "./imgs/search.png" style = "object-fit:cover"/>
+
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+       
+    <div class="row featurette">
+      <div class="col-md-7 order-md-2">
+        <h6 class = "featurette-heading h2">Profiles <sup   class = "bg-warning text-dark">New!</sup><span class="text-muted"> How Fancy.</span></h6>
+        <p class="lead">Connecting with others and successful coding is once of the main goals of Help. In order to achieve this goal, we have added a new feature, <i>Help Profiles</i>. A Help Profile is assigned to every user upon sign up, and they can veiw it help.sojs.dev/@&gt;their username&lt;. But, all profiles are empty upon creation. To fill it, go to your settings, which is found under your username in the navbar. All your pleas are visible their, so people can see what you've been up to. Soon, we will also show which pleas you have joined, to promote connectedness between our users.</p>
+      </div>
+      <div class="col-md-5 order-md-1">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img  " aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="Help Profiles" src = "./imgs/profiles.png"/>
+
+      </div>
+    </div>
+    <hr class="featurette-divider">
+    <div class="row featurette">
+      <div class="col-md-7">
         <h6 class="featurette-heading h2">WISYWIG Description <sup class = "bg-warning text-dark">New!</sup><span class="text-muted"> Stunning.</span></h6>
         <p class="lead">Imaging this: clicking the "new" button, and being greeted with an amazing WISYWIG editor powered by <a href= "https://kothing.github.io/editor/index.html">kothing</a>. None of the ugly markdown formatting, but a clean, beautiful text editor, displaying excatly what you want, and what you are going to get. No second guessing yourself "Aren't I supposed to put a space there?"</p>
       </div>
       <div class="col-md-5">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="A powerful WISYWIG editor" src = "./imgs/kothing.png"/>
-
-      </div>
-    </div>   
-
-    <hr class="featurette-divider">
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h6 class = "featurette-heading h2">Post Comments <sup   class = "bg-warning text-dark">New!</sup><span class="text-muted"> How Fancy.</span></h6>
-        <p class="lead">There used to be a time, way back in the internets beginings, that having any sort of conversation on a website was impossible. That is a thing of the past. Now, with comments powered by <a href= "https://widgetpack.com/comment-system">widgetpack</a>, that dream has become reality. Use the comments to check with people to make sure you <i>really</i> want them helping you, or provide advice or suggestions.</p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false" title="Comments Powered by widgetpack" src = "./imgs/comment.png"/>
 
       </div>
     </div>
@@ -180,11 +180,6 @@
     <p class="float-end"><a href="#">Back to top</a></p>
     {% include "./footer.html" %}
   </footer>
-
-
-
-    <script src="./js/bootstrap.bundle.min.js"></script>
-
       
   </main></body>
 </html>
