--- a/views/new.html
+++ b/views/new.html
@@ -35,6 +35,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"></script>
 <script src="https://kothing.github.io/editor/dist/kothing-editor.min.js"></script>
+<script data-ad-client="ca-pub-1672387814959701" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!----> 
 	<title>Help!</title>
 
@@ -134,7 +135,6 @@
 </div>
 
 
-    <script src="./js/bootstrap.bundle.min.js"></script>
 
       <script src="./js/form-validation.js"></script>
       <script src = './js/kothing.js'></script>
