--- a/views/accepted.html
+++ b/views/accepted.html
@@ -7,10 +7,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="../css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-	<script src="../js/bootstrap.bundle.min.js">
-	</script>
-	<link rel="stylesheet" href="../css/home.css">
-	<link rel="stylesheet" href="../css/light-theme.css">
+
+	<link rel="stylesheet" href="/css/home.css">
+	<link rel="stylesheet" href="/css/light-theme.css">
 	
 	<title>Help! - Accept</title>
 
