--- a/views/page.html
+++ b/views/page.html
@@ -174,20 +174,20 @@ var now = new Date().getTime();
       {% include "./tosembed.html" %}
     </div>
     <div class = "warnings col">
+      <div class="alert border border-info row" role="alert">
+        <p class = "col">Profiles have just been released! To see yours <a href = "/@{{ username }}">click here</a>. Or, click on your username in the navbar and select "profile"</p>
+      </div>
       <div class="alert border border-warning row" role="alert">
-        <p class = "col">Please read our <a href = "/site/privacy" class = "alert-link" style = "display: inline">privacy policy</a> and <a href = "/site/terms" class = "alert-link" style = "display: inline">terms of use</a>. The box to the left contains the terms, as we consider it the more important of the two</p>
+        <p class = "col">Please read our <a href = "/site/privacy" class = "alert-link" style = "display: inline">privacy policy</a> and <a href = "/site/terms" class = "alert-link" style = "display: inline">terms of use</a>. The box to the left contains the terms. By continuing the use of this site, you site, you signify your agreement to these terms.</p>
       </div>
       <div class="alert border border-primary row" role="alert">
         <p class = "col">If you need help navigating, or dont know excactly what this is about, try reading the <a href = "https://github.com/sojs-coder/Help-/wiki" class = "alert-link" target = "_blank" style = "display: inline">wikis</a>.</p>
       </div>
-      <div class="alert border border-danger row" role="alert">
-        <p class = "col">This site is designed for laptop and desktop use. Some pages might not work properly, or the UI will be off, if you access them on mobile.</p>
-        
-      </div>
+      
     </div>
     <!-- more than three alerts, go here -->
-    <div class="alert border border-info row" role="alert">
-        <p class = "col">These little things in boxes are site-wide alerts, and do not differ from one account to another. They are hear to notify you of site-wide changes, such as changes to the policys, or updates.</p>
+    <div class="alert border border-danger row" role="alert">
+        <p class = "col">This site is designed for laptop and desktop use. Some pages might not work properly, or the UI will be off, if you access them on mobile.</p>
         
       </div>
   </div>
