--- a/views/plea.html
+++ b/views/plea.html
@@ -5,14 +5,13 @@
   <meta charset="UTF-8">
   <meta name="robots" content="nofollow">
   <meta name = "author" content = "SoJS">
-  <meta name = "description" content = "{{ author }} is asking for help on {{ title }}"
+  <meta name = "description" content = "{{ author }} is asking for help on {{ title }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <link rel = "stylesheet" href="../css/kothing.css"/>
-<script src="../js/bootstrap.bundle.min.js"></script>
-<link rel="stylesheet" href = "../css/home.css">
-<link rel="stylesheet" href="../css/plea.css"/>
-<link href="../css/light-theme.css" rel="stylesheet">
+  <link href="/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <link rel = "stylesheet" href="/css/kothing.css"/>
+<link rel="stylesheet" href = "/css/home.css">
+<link rel="stylesheet" href="/css/plea.css"/>
+<link href="/css/light-theme.css" rel="stylesheet">
   <title>{{ title }}</title>
   
 <style>
@@ -39,7 +38,7 @@
   <div class = "container">
     <div class="col-md-12">
       <h1>{{ title }}</h1>
-      <h4 class = "text-muted">@{{ author }}</h4>
+      <h4 class = "text-muted"><a href = "/@{{ author }}">@{{ author }}</a></h4>
       
       <p class = "des">{{ des|safe }}</p>
         {% if owner %}
@@ -78,6 +77,8 @@ wpac_init.push({widget: 'Comment', id: 30312});
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(mc, s.nextSibling);
 })();
 </script>
+<h6 class = "h1"> We are adding our own comment system. Preview below</h6>
+{% include "./comments.html" %}
 <footer class="container">
     <p class="float-end"><a href="#">Back to top</a></p>
     {% include "./footer.html" %}
