--- a/views/pleas.html
+++ b/views/pleas.html
@@ -10,8 +10,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="../css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-	<script src="../js/bootstrap.bundle.min.js">
-	</script>
 	<link rel="stylesheet" href="../css/home.css">
 	<link rel="stylesheet" href="./css/pleas-search.css">
   <link href="./css/dark-theme.css" rel="stylesheet">
@@ -59,7 +57,7 @@
   {% for plea in pleas %}
     <div class="card-body">
       <h6 class="card-title h5">{{ plea.title }}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">@{{ plea.author }}</h6>
+      <a href = "/@{{ plea.author }}"><h6 class="card-subtitle mb-2 text-muted">@{{ plea.author }}</h6></a>
       <p class="card-text">{{ plea.shortDes }}</p>
       <p class = "text-muted">Tags</p>
       <ul class = "tags">
