--- a/views/search.html
+++ b/views/search.html
@@ -10,7 +10,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="../css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-	<script src="../js/bootstrap.bundle.min.js">
 	</script>
 	<link rel="stylesheet" href="../css/home.css">
 	<link rel="stylesheet" href="./css/pleas-search.css">
@@ -70,7 +69,7 @@
     <div class="card-body">
       
       <h5 class="card-title">{{ plea.title }}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">@{{ plea.author }}</h6>
+      <a href = "/@{{ plea.author }}"><h6 class="card-subtitle mb-2 text-muted">@{{ plea.author }}</h6></a>
       <p class="card-text">{{ plea.shortDes }}</p>
       
       <p class = "text-muted">Tags</p>
