--- a/views/signup.html
+++ b/views/signup.html
@@ -68,11 +68,13 @@
 				
 			</div>
         </div>
-		<p id = "errorMessage">&nbsp;</p>
+		<div id = "errorMessage"></div>
+    <div>By signing up, you agree to our <a href = "/site/terms">terms of use</a> and <a href = "/site/privacy">privacy policy</a></div>
 		<div class="form-group">
             <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
         </div>
     </form>
+    
 	<div class="text-center">Have an account? <a href="/login">Log In here</a></div>
 </div>
   
@@ -87,7 +89,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/doesnotmatch.js"></script>
   </body>
 </html>
